--- a/templates/taxi/driver_detail.html
+++ b/templates/taxi/driver_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <h1>
-    Username: {{ driver.username }}
+    Username: {{ driver.username }} <a href="{% url 'taxi:driver-update' driver.id %}" class="btn btn-primary">Update</a>
   </h1>
 
   <p><strong>First name:</strong> {{ driver.first_name }}</p>
@@ -23,4 +23,6 @@
       <p>No cars!</p>
     {% endfor %}
   </div>
+  <a href="{% url 'taxi:driver-license-update' driver.id %}" class="btn btn-warning">Update License</a>
+  <a href="{% url 'taxi:driver-delete' driver.id %}" class="btn btn-danger">Delete</a>
 {% endblock %}
